--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
     <nav class="mobile-nav">
         <div class="mobile-nav-header">Kabale Online</div>
         <div class="mobile-nav-links">
-            <a href="https://www.kabaleonline.com/"><i class="fa-solid fa-store"></i> All Items</a>
-            <a href="browse.html"><i class="fa-solid fa-screwdriver-wrench"></i> Services</a>
+            <a href="index.html"><i class="fa-solid fa-store"></i> Home</a>
+            <a href="browse.html"><i class="fa-solid fa-screwdriver-wrench"></i> Browse Services</a>
             <a href="https://www.kabaleonline.com/events/"><i class="fa-solid fa-calendar-days"></i> Events</a>
             <a href="inbox.html"><i class="fa-solid fa-inbox"></i> My Inbox</a>
             <a href="https://www.kabaleonline.com/rentals/"><i class="fa-solid fa-building"></i> Hostels & Rentals</a>
