--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-    border-radius: 1px;
+    border-radius: 0;
     margin-bottom: 1rem;
 }
 
