--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
         </section>
 
         <!-- FEATURED SERVICES -->
+<p><center> FEATURED SERVICES <center> </p>
         <section id="featured-services" class="info-section" style="background:#e9ecef; color:#000;">
             <div class="featured-card">
                 <h3>Plumbing & Repairs</h3>
