--- a/requests.html
+++ b/requests.html
@@ -63,7 +63,7 @@
         </div>
     </main>
 
-        <footer>
+    <footer>
         <div class="container">
             <div class="footer-logo">Kabale <span>Online</span></div>
             <p class="footer-tagline">Your Community Marketplace</p>
@@ -80,8 +80,7 @@
             <p class="footer-copyright">&copy; 2025 Kabale Online. All Rights Reserved.</p>
         </div>
     </footer>
-
-    <script type="module" src="js/home.js"></script>
+    <script type="module" src="js/requests.js"></script>
     <script>
         document.querySelector('.hamburger-menu').addEventListener('click', () => {
             document.querySelector('.mobile-nav').classList.toggle('active');
