--- a/upgrade.html
+++ b/upgrade.html
@@ -6,6 +6,8 @@
     <title>Upgrade Plan - Kabale Online</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    
+    <!-- === EMBEDDED CSS FOR UPGRADE PAGE - AS REQUESTED === -->
     <style>
         .pricing-card {
             background-color: var(--card-bg);
@@ -16,17 +18,34 @@
             border: 3px solid transparent;
             transition: all 0.3s ease;
         }
-        .pricing-card.current {
-            border-color: var(--primary-color);
-            box-shadow: var(--shadow-lg);
-            transform: scale(1.05);
-        }
         .pricing-card h3 { font-size: 1.75rem; }
         .pricing-card .price { font-size: 2.5rem; font-weight: 800; margin-bottom: 1.5rem; color: var(--primary-color); }
         .pricing-card .price span { font-size: 1rem; font-weight: 500; color: var(--text-light); }
         .pricing-card ul { list-style: none; padding: 0; margin: 0 0 2rem 0; }
         .pricing-card ul li { padding: 0.75rem 0; display: flex; align-items: center; justify-content: center; gap: 10px; }
         .pricing-card ul li .fa-check-circle { color: #28a745; }
+
+        /* --- THIS IS THE NEW STYLE FOR THE CURRENT PLAN --- */
+        .pricing-card.current {
+            background-color: #fffbeb; /* Light yellow background */
+            border-color: var(--accent-color);
+            transform: scale(1.05);
+            /* New glowing animation */
+            animation: subtle-glow 3s infinite ease-in-out;
+        }
+
+        /* --- THIS IS THE NEW GLOWING ANIMATION --- */
+        @keyframes subtle-glow {
+            0% {
+                box-shadow: 0 0 5px rgba(255, 193, 7, 0.2), 0 0 10px rgba(255, 193, 7, 0.2);
+            }
+            50% {
+                box-shadow: 0 0 20px rgba(255, 193, 7, 0.4), 0 0 30px rgba(255, 193, 7, 0.3);
+            }
+            100% {
+                box-shadow: 0 0 5px rgba(255, 193, 7, 0.2), 0 0 10px rgba(255, 193, 7, 0.2);
+            }
+        }
     </style>
 </head>
 <body>
