--- a/index.html
+++ b/index.html
@@ -172,6 +172,22 @@
     font-size: 0.95rem;
     margin-bottom: 0.5rem;
 }
+.featured-card {
+    border-radius: 12px;
+    padding: 2rem;
+    color: #fff;
+    text-align: center;
+    font-weight: 600;
+    background: linear-gradient(270deg, #ff6f61, #6a1b9a, #0288d1, #43a047, #fbc02d, #e65100);
+    background-size: 1200% 1200%;
+    animation: gradientFlow 12s ease infinite;
+}
+
+@keyframes gradientFlow {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
     </style>
 </head>
 <body>
