--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#4A90E2">
   <title>Kabale Online - Coming Soon</title>
-  <meta name="description" content="Kabale Online — Your trusted community marketplace. Something amazing is coming soon!">
+  <meta name="description" content="Kabale Online Services — Your trusted community marketplace. Something amazing is coming soon!">
   <meta property="og:title" content="Kabale Online - Coming Soon">
   <meta property="og:description" content="Your trusted community marketplace. Stay tuned for the new Kabale Online Gigs platform.">
   <meta property="og:image" content="https://www.kabaleonline.com/assets/images/kabale-online-social-share.png">
