--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                     <h4>Contact Us</h4>
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Kabale, Uganda</li>
-                        <li><i class="fas fa-phone-alt"></i> +256 123 456789</li>
-                        <li><i class="fas fa-envelope"></i> help@kabaleonline.com</li>
+                        <li><i class="fas fa-phone-alt"></i> +256 784655792</li>
+                        <li><i class="fas fa-envelope"></i> kabaleservices@gmail.com</li>
                     </ul>
                 </div>
             </div>
